--- a/src/Sesile/DocumentBundle/Resources/views/Document/visu.html.twig
+++ b/src/Sesile/DocumentBundle/Resources/views/Document/visu.html.twig
@@ -6,7 +6,7 @@
 
 {% block content %}
 
-    {% if ajax == 'false' %}
+    {% if ajax != 'true' %}
         <div class="bloc_page">
         <div class="titre_page">
             <span class="glyphicon glyphicon-eye-open"></span>&nbsp;&nbsp;Visualiseur de fichier PES
@@ -14,7 +14,7 @@
     {% endif %}
 
     {% if isPJ is defined %}
-        {% if ajax == 'false' %}
+        {% if ajax != 'true' %}
             <div class="col-lg-12">
                 <label>Ce fichier est un PES PJ ou un autre fichier non soumis à signature</label>
                 <a href="{{ app.request.headers.get('referer') }}" class="btn btn-primary pull-right">
@@ -38,7 +38,7 @@
                         {% endfor %}
                     </select>
                 </div>
-                {% if ajax == 'false' %}
+                {% if ajax != 'true' %}
                     <div class="col-lg-6">
                         <a href="{{ app.request.headers.get('referer') }}" class="btn btn-primary pull-right">
                             <span class="glyphicon glyphicon-share-alt"></span>
